CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	void			* SdaiADB;
typedef	int64_t			ExpressID;
SdaiAttr		DECL STDC	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiAttr	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									char					* attributeName
								)
{
	return	sdaiGetAttrDefinition(
					entity,
					(const char*) attributeName
				);
}
SdaiEntity		DECL STDC	sdaiGetInstanceType(
									SdaiInstance			instance
								);
SdaiInteger		DECL STDC	sdaiGetMemberCount(
									SdaiAggr				aggregate
								);
int_t			DECL STDC	sdaiIsKindOf(
									SdaiInstance			instance,
									SdaiEntity				entity
								);
void			DECL STDC	sdaiAppend(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiAppend(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiAppend(
					aggregate,
					valueType,
					(const void*) value
				);
}
SdaiADB			DECL STDC	sdaiCreateADB(
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	SdaiADB	sdaiCreateADB(
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiCreateADB(
					valueType,
					(const void*) value
				);
}
SdaiAggr		DECL STDC	sdaiCreateAggr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
SdaiAggr		DECL STDC	sdaiCreateAggrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiAggr	sdaiCreateAggrBN(
									SdaiInstance			instance,
									char					* attributeName
								)
{
	return	sdaiCreateAggrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiInstance	DECL STDC	sdaiCreateInstance(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiInstance	DECL STDC	sdaiCreateInstanceBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiInstance	sdaiCreateInstanceBN(
										SdaiModel				model,
										char					* entityName
									)
{
	return	sdaiCreateInstanceBN(
					model,
					(const char*) entityName
				);
}
void			DECL STDC	sdaiDeleteInstance(
									SdaiInstance			instance
								);
void			DECL STDC	sdaiPutADBTypePath(
									const SdaiADB			ADB,
									int_t					pathCount,
									const char				* path
								);
static	inline	void	sdaiPutADBTypePath(
								const SdaiADB			ADB,
								int_t					pathCount,
								char					* path
							)
{
	return	sdaiPutADBTypePath(
					ADB,
					pathCount,
					(const char*) path
				);
}
void			DECL STDC	sdaiPutAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttr(
								SdaiInstance			instance,
								const SdaiAttr			attribute,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttr(
					instance,
					attribute,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiPutAttrBN(
									SdaiInstance			instance,
									const char				* attributeName,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								char					* attributeName,
								SdaiPrimitiveType		valueType,
								const void				* value
							)
{
	return	sdaiPutAttrBN(
					instance,
					(const char*) attributeName,
					valueType,
					value
				);
}
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								const char				* attributeName,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttrBN(
					instance,
					attributeName,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	engiSetComment(
									SdaiInstance			instance,
									const char				* comment
								);
static	inline	void	engiSetComment(
								SdaiInstance			instance,
								char					* comment
							)
{
	return	engiSetComment(
					instance,
					(const char*) comment
				);
}
void			DECL STDC	circleSegments(
									int_t					circles,
									int_t					smallCircles
								);
void			DECL STDC	cleanMemory(
									SdaiModel				model,
									int_t					mode
								);
ExpressID		DECL STDC	internalGetP21Line(
									SdaiInstance			instance
								);
SdaiInstance	DECL STDC	internalGetInstanceFromP21Line(
									SdaiModel				model,
									ExpressID				P21Line
								);
int_t			DECL STDC	setStringUnicode(
									int_t					unicode
								);
void			DECL STDC	setFilter(
									SdaiModel				model,
									int_t					setting,
									int_t					mask
								);
void			DECL STDC	owlGetModel(
									SdaiModel				model,
									int64_t					* owlModel
								);
void			DECL STDC	owlGetInstance(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
int_t			DECL STDC	initializeModellingInstance(
									SdaiModel				model,
									int_t					* noVertices,
									int_t					* noIndices,
									double					scale,
									SdaiInstance			instance
								);
int_t			DECL STDC	finalizeModelling(
									SdaiModel				model,
									float					* vertices,
									int_t					* indices,
									int_t					FVF
								);
int_t			DECL STDC	getInstanceInModelling(
									SdaiModel				model,
									SdaiInstance			instance,
									int_t					mode,
									int_t					* startVertex,
									int_t					* startIndex,
									int_t					* primitiveCount
								);
void			DECL STDC	setVertexOffset(
									SdaiModel				model,
									double					x,
									double					y,
									double					z
								);
void			DECL STDC	setFormat(
									SdaiModel				model,
									int_t					setting,
									int_t					mask
								);
int_t			DECL STDC	getConceptualFaceCnt(
									SdaiInstance			instance
								);
int_t			DECL STDC	getConceptualFaceEx(
									SdaiInstance			instance,
									int_t					index,
									int_t					* startIndexTriangles,
									int_t					* noIndicesTriangles,
									int_t					* startIndexLines,
									int_t					* noIndicesLines,
									int_t					* startIndexPoints,
									int_t					* noIndicesPoints,
									int_t					* startIndexFacePolygons,
									int_t					* noIndicesFacePolygons,
									int_t					* startIndexConceptualFacePolygons,
									int_t					* noIndicesConceptualFacePolygons
								);