Android/IFCViewerAndroid/distribution/ifcengine/include/engine.h


int64_t		DECL STDC	GetClassByName(
									int64_t			model,
									const char		* owlClassName
								);
int64_t		DECL STDC	GetPropertyByName(
									int64_t			model,
									const char		* rdfPropertyName
								);
int64_t		DECL STDC	GetInstanceClass(
									int64_t			owlInstance
								);
int64_t		DECL STDC	GetObjectTypeProperty(
									int64_t			owlInstance,
									int64_t			rdfProperty,
									int64_t			** value,
									int64_t			* card
								);
int64_t		DECL STDC	GetDataTypeProperty(
									int64_t			owlInstance,
									int64_t			rdfProperty,
									void			** value,
									int64_t			* card
								);
int64_t		DECL STDC	SetFormat(
									int64_t			model,
									int64_t			setting,
									int64_t			mask
								);
void		DECL STDC	SetDefaultColor(
									int64_t			model,
									int32_t			ambient,
									int32_t			diffuse,
									int32_t			emissive,
									int32_t			specular
								);
int64_t		DECL STDC	CalculateInstance(
									int64_t			owlInstance,
									int64_t			* vertexBufferSize,
									int64_t			* indexBufferSize,
									int64_t			* transformationBufferSize
								);
int64_t		DECL STDC	UpdateInstanceVertexBuffer(
									int64_t			owlInstance,
									void			* vertexBuffer
								);
int64_t		DECL STDC	UpdateInstanceIndexBuffer(
									int64_t			owlInstance,
									void			* indexBuffer
								);