C#/IFCViewerSGL_v1/IFCViewerSGL/IfcEngine.cs


        [DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
        public static extern int_t sdaiGetAttrDefinition(int_t entity, string attributeName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
        public static extern int_t sdaiGetAttrDefinition(int_t entity, byte[] attributeName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiGetInstanceType")]
        public static extern int_t sdaiGetInstanceType(int_t instance);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiGetMemberCount")]
        public static extern int_t sdaiGetMemberCount(int_t aggregate);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiIsKindOf")]
        public static extern int_t sdaiIsKindOf(int_t instance, int_t entity);


        //
        //  Instance Writing
        //


        [DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(int_t list, int_t valueType, ref int_t value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(int_t list, int_t valueType, ref double value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(int_t list, int_t valueType, string value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(int_t list, int_t valueType, byte[] value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern int_t sdaiCreateADB(int_t valueType, ref int_t value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern int_t sdaiCreateADB(int_t valueType, ref double value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern int_t sdaiCreateADB(int_t valueType, string value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern int_t sdaiCreateADB(int_t valueType, byte[] value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateAggr")]
        public static extern int_t sdaiCreateAggr(int_t instance, int_t attribute);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateAggrBN")]
        public static extern int_t sdaiCreateAggrBN(int_t instance, string attributeName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateAggrBN")]
        public static extern int_t sdaiCreateAggrBN(int_t instance, byte[] attributeName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateInstance")]
        public static extern int_t sdaiCreateInstance(int_t model, int_t entity);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateInstanceBN")]
        public static extern int_t sdaiCreateInstanceBN(int_t model, string entityName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateInstanceBN")]
        public static extern int_t sdaiCreateInstanceBN(int_t model, byte[] entityName);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiDeleteInstance")]
        public static extern void sdaiDeleteInstance(int_t instance);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutADBTypePath")]
        public static extern void sdaiPutADBTypePath(int_t ADB, int_t pathCount, string path);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutADBTypePath")]
        public static extern void sdaiPutADBTypePath(int_t ADB, int_t pathCount, byte[] path);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(int_t instance, int_t attribute, int_t valueType, ref int_t value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(int_t instance, int_t attribute, int_t valueType, ref double value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(int_t instance, int_t attribute, int_t valueType, string value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(int_t instance, int_t attribute, int_t valueType, byte[] value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, string attributeName, int_t valueType, ref int_t value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, string attributeName, int_t valueType, ref double value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, string attributeName, int_t valueType, string value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, string attributeName, int_t valueType, byte[] value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, byte[] attributeName, int_t valueType, ref int_t value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, byte[] attributeName, int_t valueType, ref double value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, byte[] attributeName, int_t valueType, string value);

        [DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(int_t instance, byte[] attributeName, int_t valueType, byte[] value);

        [DllImport(IFCEngineDLL, EntryPoint = "engiSetComment")]
        public static extern void engiSetComment(int_t instance, string comment);

        [DllImport(IFCEngineDLL, EntryPoint = "engiSetComment")]
        public static extern void engiSetComment(int_t instance, byte[] comment);


        //
        //  Controling Calls
        //


        [DllImport(IFCEngineDLL, EntryPoint = "circleSegments")]
        public static extern void circleSegments(int_t circles, int_t smallCircles);

        [DllImport(IFCEngineDLL, EntryPoint = "cleanMemory")]
        public static extern void cleanMemory(int_t model, int_t mode);

        [DllImport(IFCEngineDLL, EntryPoint = "internalGetP21Line")]
        public static extern int_t internalGetP21Line(int_t instance);

        [DllImport(IFCEngineDLL, EntryPoint = "internalGetInstanceFromP21Line")]
        public static extern int_t internalGetInstanceFromP21Line(int_t model, int_t P21Line);

        [DllImport(IFCEngineDLL, EntryPoint = "setStringUnicode")]
        public static extern int_t setStringUnicode(int_t unicode);


        //
        //  Geometry Interaction
        //


        [DllImport(IFCEngineDLL, EntryPoint = "initializeModellingInstance")]
        public static extern int_t initializeModellingInstance(int_t model, ref int_t noVertices, ref int_t noIndices, double scale, int_t instance);

        [DllImport(IFCEngineDLL, EntryPoint = "finalizeModelling")]
        public static extern int_t finalizeModelling(int_t model, float[] vertices, int[] indices, int_t FVF);

        [DllImport(IFCEngineDLL, EntryPoint = "finalizeModelling")]
        public static extern int_t finalizeModelling(int_t model, double[] vertices, int_t[] indices, int_t FVF);

        [DllImport(IFCEngineDLL, EntryPoint = "getInstanceInModelling")]
        public static extern int_t getInstanceInModelling(int_t model, int_t instance, int_t mode, ref int_t startVertex, ref int_t startIndex, ref int_t primitiveCount);

        [DllImport(IFCEngineDLL, EntryPoint = "setVertexOffset")]
        public static extern void setVertexOffset(int_t model, double x, double y, double z);

        [DllImport(IFCEngineDLL, EntryPoint = "setFilter")]
        public static extern void setFilter(int_t model, int_t setting, int_t mask);

        [DllImport(IFCEngineDLL, EntryPoint = "setFormat")]
        public static extern void setFormat(int_t model, int_t setting, int_t mask);

        [DllImport(IFCEngineDLL, EntryPoint = "SetFormat")]
        public static extern int_t SetFormat(int_t model, int_t setting, int_t mask);
        
        [DllImport(IFCEngineDLL, EntryPoint = "getConceptualFaceCnt")]
        public static extern int_t getConceptualFaceCnt(int_t instance);

        [DllImport(IFCEngineDLL, EntryPoint = "getConceptualFaceEx")]
        public static extern int_t getConceptualFaceEx(int_t instance, int_t index, ref int_t startIndexTriangles, ref int_t noIndicesTriangles, ref int_t startIndexLines, ref int_t noIndicesLines, ref int_t startIndexPoints, ref int_t noIndicesPoints, ref int_t startIndexFacesPolygons, ref int_t noIndicesFacesPolygons, ref int_t startIndexConceptualFacePolygons, ref int_t noIndicesConceptualFacePolygons);

        [DllImport(IFCEngineDLL, EntryPoint = "CalculateInstance")]
        public static extern Int64 CalculateInstance(Int64 owlInstance, ref Int64 vertexBufferSize, ref Int64 indexBufferSize, ref Int64 transformationBufferSize);

        [DllImport(IFCEngineDLL, EntryPoint = "UpdateInstanceVertexBuffer")]
        public static extern Int64 UpdateInstanceVertexBuffer(Int64 owlInstance, float[] vertexBuffer);

        [DllImport(IFCEngineDLL, EntryPoint = "UpdateInstanceIndexBuffer")]
        public static extern Int64 UpdateInstanceIndexBuffer(Int64 owlInstance, int[] indexBuffer);

        [DllImport(IFCEngineDLL, EntryPoint = "GetInstanceClass")]
        public static extern Int64 GetInstanceClass(Int64 owlInstance);

        [DllImport(IFCEngineDLL, EntryPoint = "GetClassByName")]
        public static extern Int64 GetClassByName(Int64 model, string owlClassName);

        [DllImport(IFCEngineDLL, EntryPoint = "GetPropertyByName")]
        public static extern Int64 GetPropertyByName(Int64 model, string rdfPropertyName);

        [DllImport(IFCEngineDLL, EntryPoint = "GetObjectTypeProperty")]
        public static extern Int64 GetObjectTypeProperty(Int64 owlInstance, Int64 rdfProperty, out IntPtr value, ref Int64 card);

        [DllImport(IFCEngineDLL, EntryPoint = "GetDataTypeProperty")]
        public static extern Int64 GetDataTypeProperty(Int64 owlInstance, Int64 rdfProperty, out IntPtr value, ref Int64 card);

        [DllImport(IFCEngineDLL, EntryPoint = "owlGetModel")]
        public static extern void owlGetModel(int_t model, ref Int64 owlModel);

        [DllImport(IFCEngineDLL, EntryPoint = "owlGetInstance")]
        public static extern void owlGetInstance(int_t model, int_t instance, ref Int64 owlInstance);

        [DllImport(IFCEngineDLL, EntryPoint = "SetDefaultColor")]
        public static extern void SetDefaultColor(Int64 model, UInt32 ambient, UInt32 diffuse, UInt32 emissive, UInt32 specular);
    }
}
